<resources>
    <string name="app_name">MASSHJP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtMenu">Menu</string>

    <!-- Profile and Menu text -->
    <string name="txtMastersList">Official Master List</string>
    <string name="txtSports">Sportsfest</string>
    <string name="txtAttendance">Attendance</string>
    <string name="txtScheduling">Scheduling</string>
    <string name="txtFunds">Funds</string>
    <string name="txtLive">Live Mass</string>
    <string name="txtPage">Ministry Page</string>
    <string name="txtwebsite">Visit Website</string>
    <string name="txtHelp">Help &amp; Support</string>
    <string name="txtSettings">Settings &amp; Privacy</string>
    <string name="txtLogout">Logout</string>

    <!-- Profile and Menu text -->
    <string name="tv_title">Altar Servers Training Handbook</string>
    <string name="cv_genKnowldge">GENERAL KNOWLEDGE</string>
    <string name="cv_module1">INTRODUCTION TO THE MINISTRY OF ALTAR SERVERS</string>
    <string name="cv_module2">THE ROMAN CATHOLIC CHURCH</string>
    <string name="cv_module3">THE LITURGY</string>
    <string name="cv_module4">THE HOLY EUCHARIST CELEBRATION</string>
    <string name="cv_module5">SACRED OBJECTS</string>
    <string name="cv_module6">ALTAR PRESENCE, NORMS AND REVERENCE</string>

    <string name="txtComingSoon">Coming Soon!</string>
    <string name="txtMaintenance">This feature is still under development.</string>

</resources>